Profile sitebuild and fixing integration code
