# src/api/swagger/apis/AuthApi.ts
@@ -18,9 +18,6 @@ import {
     AuthRegistrationFailedException,
     AuthRegistrationFailedExceptionFromJSON,
     AuthRegistrationFailedExceptionToJSON,
-    HttpStatusCode,
-    HttpStatusCodeFromJSON,
-    HttpStatusCodeToJSON,
     LoginDto,
     LoginDtoFromJSON,
     LoginDtoToJSON,
@@ -136,7 +133,7 @@ export class AuthApi extends runtime.BaseAPI {
      * Returns nothing, but registers a contact for the partner
      * Registers a contact for a partner
      */
-    async registerPartnerRaw(requestParameters: RegisterPartnerRequest): Promise<runtime.ApiResponse<HttpStatusCode>> {
+    async registerPartnerRaw(requestParameters: RegisterPartnerRequest): Promise<runtime.ApiResponse<void>> {
         const queryParameters: runtime.HTTPQuery = {};
 
         const headerParameters: runtime.HTTPHeaders = {};
@@ -155,16 +152,15 @@ export class AuthApi extends runtime.BaseAPI {
             body: RegisterPartnerDtoToJSON(requestParameters.registerPartnerDto),
         });
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => HttpStatusCodeFromJSON(jsonValue));
+        return new runtime.VoidApiResponse(response);
     }
 
     /**
      * Returns nothing, but registers a contact for the partner
      * Registers a contact for a partner
      */
-    async registerPartner(requestParameters: RegisterPartnerRequest): Promise<HttpStatusCode> {
-        const response = await this.registerPartnerRaw(requestParameters);
-        return await response.value();
+    async registerPartner(requestParameters: RegisterPartnerRequest): Promise<void> {
+        await this.registerPartnerRaw(requestParameters);
     }
 
     /**
